--- a/HIFI-PROTOTYPE/app/src/main/res/layout/custom.xml
+++ b/HIFI-PROTOTYPE/app/src/main/res/layout/custom.xml
@@ -1,23 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_height="match_parent"
-    android:paddingLeft="10dp" android:paddingRight="10dp"
-    android:background="#fff" android:layout_width="300dp"
-    android:paddingTop="10dp">
-    <EditText android:layout_height="wrap_content" android:id="@+id/txtUsername"
-        android:layout_width="match_parent">
-        <requestFocus></requestFocus>
-    </EditText>
-    <EditText android:layout_height="wrap_content"
-        android:inputType="textPassword" android:id="@+id/txtPassword"
-        android:layout_width="match_parent"></EditText>
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:id="@+id/linearLayout1">
-        <Button android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_weight="0.5"
-            android:id="@+id/btnLogin" android:text="Login"></Button>
-        <Button android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_weight="0.5"
-            android:id="@+id/btnCancel" android:text="Cancel"></Button>
-    </LinearLayout>
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/title"
+        android:src="@drawable/groupicon"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="LOGIN"
+        android:gravity="center"
+        android:textSize="35sp"
+        android:background="#FFFFBB33"/>
+
+    <EditText
+        android:id="@+id/username"
+        android:inputType="textEmailAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:hint="username" />
+
+    <EditText
+        android:id="@+id/password"
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:hint="password"/>
 </LinearLayout>
